Fixed sizing issue on mobile

--- a/capstone/src/app/feed/feed.page.scss
+++ b/capstone/src/app/feed/feed.page.scss
@@ -1,6 +1,7 @@
 #images {
 	margin: 0 auto;
 	width: 606px;
+	max-width: 100%;
 }
 
 .image {
